# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  machine.md  monopoli.md
tetris-game/: .coverage  pyproject.toml
tetris-game/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
tetris-game/src/: button.py  event_queue.py  game_engine.py  game_loop.py  index.py  main_menu.py  renderer.py  storage_controller.py  tetromino.py  username.py
tetris-game/src/storage/: highscores.csv
tetris-game/src/tests/: game_engine_test.py  game_loop_test.py  tetromino_test.py  username_test.py
