[tool.poetry]
name = "tetris-game"
version = "0.1.0"
description = ""
authors = ["maxxof"]
readme = "README.md"
packages = [{include = "tetris_game"}]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.3.0"
invoke = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
